--- a/Cowboy_Cigarettes Case_Study.ipynb
+++ b/Cowboy_Cigarettes Case_Study.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Springboard Time Series - 'Cowboy Cigarettes' Case Study - Tier 1"
+    "# Note: This assignment seems to be broken due to changes in implementation of the packages used"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Springboard Time Series - 'Cowboy Cigarettes' Case Study"
    ]
   },
   {
@@ -76,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -233,7 +240,7 @@
        "[144 rows x 3 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +274,7 @@
        "Index(['Unnamed: 0', 'Time', '#CigSales'], dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +304,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +331,7 @@
        "False"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +463,7 @@
        "4  1949-05    1000121"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -543,7 +550,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -587,7 +594,7 @@
        "Name: #CigSales, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +628,7 @@
        "<Axes: xlabel='Month'>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -680,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -737,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -746,7 +753,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/32/q7r2_p1119dbx7v3h67xdvbm0000gn/T/ipykernel_3963/261422229.py:4: InterpolationWarning: The test statistic is outside of the range of p-values available in the\n",
+      "/var/folders/32/q7r2_p1119dbx7v3h67xdvbm0000gn/T/ipykernel_4230/261422229.py:4: InterpolationWarning: The test statistic is outside of the range of p-values available in the\n",
       "look-up table. The actual p-value is smaller than the p-value returned.\n",
       "\n",
       "  kpss(y)\n"
@@ -761,7 +768,7 @@
        " {'10%': 0.347, '5%': 0.463, '2.5%': 0.574, '1%': 0.739})"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +808,7 @@
        "<Axes: xlabel='Month'>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -831,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +865,7 @@
        "<Axes: xlabel='Month'>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -890,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -899,7 +906,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/32/q7r2_p1119dbx7v3h67xdvbm0000gn/T/ipykernel_3963/1327700776.py:1: InterpolationWarning: The test statistic is outside of the range of p-values available in the\n",
+      "/var/folders/32/q7r2_p1119dbx7v3h67xdvbm0000gn/T/ipykernel_4230/1327700776.py:1: InterpolationWarning: The test statistic is outside of the range of p-values available in the\n",
       "look-up table. The actual p-value is greater than the p-value returned.\n",
       "\n",
       "  kpss(y_log.diff().dropna())\n"
@@ -914,7 +921,7 @@
        " {'10%': 0.347, '5%': 0.463, '2.5%': 0.574, '1%': 0.739})"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1037,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1082,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[29], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m d\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[1;32m      3\u001b[0m q\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m----> 4\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mARIMA\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_log\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mp\u001b[49m\u001b[43m,\u001b[49m\u001b[43md\u001b[49m\u001b[43m,\u001b[49m\u001b[43mq\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m model_fit \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mfit()\n\u001b[1;32m      6\u001b[0m forecast \u001b[38;5;241m=\u001b[39m model_fit\u001b[38;5;241m.\u001b[39mforecast(\u001b[38;5;241m24\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[26], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m d\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[1;32m      3\u001b[0m q\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m----> 4\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mARIMA\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_log\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mp\u001b[49m\u001b[43m,\u001b[49m\u001b[43md\u001b[49m\u001b[43m,\u001b[49m\u001b[43mq\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m model_fit \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mfit()\n\u001b[1;32m      6\u001b[0m forecast \u001b[38;5;241m=\u001b[39m model_fit\u001b[38;5;241m.\u001b[39mforecast(\u001b[38;5;241m24\u001b[39m)\n",
       "File \u001b[0;32m~/Library/Caches/pypoetry/virtualenvs/bootcamp-uxjvF1PH-py3.11/lib/python3.11/site-packages/statsmodels/tsa/arima_model.py:45\u001b[0m, in \u001b[0;36mARIMA.__init__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m---> 45\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/Library/Caches/pypoetry/virtualenvs/bootcamp-uxjvF1PH-py3.11/lib/python3.11/site-packages/statsmodels/tsa/arima_model.py:29\u001b[0m, in \u001b[0;36mARMA.__init__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m---> 29\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m(ARIMA_DEPRECATION_ERROR)\n",
       "\u001b[0;31mNotImplementedError\u001b[0m: \nstatsmodels.tsa.arima_model.ARMA and statsmodels.tsa.arima_model.ARIMA have\nbeen removed in favor of statsmodels.tsa.arima.model.ARIMA (note the .\nbetween arima and model) and statsmodels.tsa.SARIMAX.\n\nstatsmodels.tsa.arima.model.ARIMA makes use of the statespace framework and\nis both well tested and maintained. It also offers alternative specialized\nparameter estimators.\n"
@@ -1105,7 +1112,7 @@
    "outputs": [],
    "source": [
     "# Call summary() on model_fit\n",
-    "model_fit._ _ _"
+    "model_fit.summary()"
    ]
   },
   {
@@ -1124,8 +1131,8 @@
    "outputs": [],
    "source": [
     "# Call figure() and plot() on the plt\n",
-    "plt._ _ _(figsize=(15,10))\n",
-    "plt._ _ _(y_log.diff())\n",
+    "plt.figure(figsize=(15,10))\n",
+    "plt.plot(y_log.diff())\n",
     "plt.plot(model_fit.predict(), color = 'red')"
    ]
   },
@@ -1146,21 +1153,21 @@
    "source": [
     "# Declare a variable called forecast_period with the amount of months to forecast, and\n",
     "# create a range of future dates that is the length of the periods you've chosen to forecast\n",
-    "_ _ _ = _ _ _\n",
+    "forecast_period = 2\n",
     "date_range = pd.date_range(y_log.index[-1], periods = forecast_period, \n",
     "              freq='MS').strftime(\"%Y-%m-%d\").tolist()\n",
     "\n",
     "# Convert that range into a dataframe that includes your predictions\n",
     "# First, call DataFrame on pd\n",
-    "future_months = pd._ _ _(date_range, columns = ['Month']\n",
+    "future_months = pd.DataFrame(date_range, columns = ['Month']\n",
     "# Let's now convert the 'Month' column to a datetime object with to_datetime \n",
-    "future_months['Month'] = pd._ _ _(future_months['Month'])\n",
+    "future_months['Month'] = pd.to_datetime(future_months['Month'])\n",
     "future_months.set_index('Month', inplace = True)\n",
     "future_months['Prediction'] = forecast[0]\n",
     "\n",
     "# Plot your future predictions\n",
     "# Call figure() on plt\n",
-    "plt._ _ _(figsize=(15,10))\n",
+    "plt.figure(figsize=(15,10))\n",
     "plt.plot(y_log)\n",
     "plt.plot(y_log['Nov 1960'].append(future_months['Prediction']))\n",
     "plt.show()"
@@ -1174,10 +1181,10 @@
    "source": [
     "# Now plot the original variable y \n",
     "# Use the same functions as before\n",
-    "plt._ _ _(figsize=(15,10))\n",
-    "plt._ _ _(y)\n",
-    "plt._ _ _(np.exp(y_log['Nov 1960'].append(future_months['Prediction'])))\n",
-    "plt._ _ _()"
+    "plt.figure(figsize=(15,10))\n",
+    "plt.plot(y)\n",
+    "plt.plot(np.exp(y_log['Nov 1960'].append(future_months['Prediction'])))\n",
+    "plt.show()"
    ]
   },
   {
